[gd_scene load_steps=13 format=2]

[ext_resource path="res://Entities/Enemies/Bandit/Bandit.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/Enemies/Slugs/GravityShooter/GravityShooter.png" type="Texture" id=2]
[ext_resource path="res://Entities/Enemies/Slugs/GravityShooter/Launcher.png" type="Texture" id=3]
[ext_resource path="res://Entities/Enemies/Slugs/GravityShooter/Gun.gd" type="Script" id=4]
[ext_resource path="res://Entities/Effects/Blood/SlugGoo/SlugGoo.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entities/Enemies/Slugs/GravityShooter/GravityShooterCorpse.png" type="Texture" id=6]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float isOn = 1.0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	vec4 flash = vec4(
		mix(color.r, 1, isOn),
		mix(color.g, 1, isOn),
		mix(color.b, 1, isOn),
		color.a
	);
	COLOR = flash;
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 1 )
shader_param/isOn = 0.0

[sub_resource type="Animation" id=4]
resource_name = "Fall"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=6]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Walk"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[node name="Slug" instance=ExtResource( 1 )]
targetRange = 128
jumpRange = Vector2( 1000, 1000 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 2 )
offset = Vector2( 0, -16 )
hframes = 3
vframes = 2
frame = 0

[node name="Support" type="ColorRect" parent="." index="1"]
show_behind_parent = true
margin_left = -1.0
margin_top = -32.0
margin_right = 1.0
margin_bottom = -15.0
color = Color( 0.0823529, 0.113725, 0.156863, 1 )

[node name="Support2" type="ColorRect" parent="Support" index="0"]
show_behind_parent = true
margin_left = -1.0
margin_right = 3.0
margin_bottom = 17.0
color = Color( 0, 0, 0, 1 )

[node name="Gun" parent="." index="2"]
show_behind_parent = true
position = Vector2( 0, -30 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Gun" index="0"]
show_behind_parent = true
material = SubResource( 5 )
texture = ExtResource( 3 )
offset = Vector2( 7, 0 )

[node name="Cooldown" type="Timer" parent="Gun" index="1"]
wait_time = 2.0
autostart = true

[node name="AttackTimer" type="Timer" parent="Gun" index="2"]
wait_time = 0.1
autostart = true

[node name="BarrelEnd" type="Position2D" parent="Gun" index="3"]

[node name="DamageManager" parent="." index="4"]
maxHealth = 1450
corpseSprites = [ ExtResource( 6 ) ]
deathParticles = ExtResource( 5 )

[node name="Jump" parent="Timers" index="1"]
wait_time = 3.0

[node name="AnimationPlayer" parent="." index="7"]
anims/Fall = SubResource( 4 )
anims/Idle = SubResource( 6 )
anims/RESET = SubResource( 2 )
anims/Walk = SubResource( 3 )

[connection signal="timeout" from="Gun/Cooldown" to="Gun" method="_on_cooldown_timeout"]
[connection signal="timeout" from="Gun/AttackTimer" to="Gun" method="shoot"]

[editable path="Collisions/Hurtbox"]
[editable path="Collisions/PlayerDetection"]
